<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:id="@+id/view">
        <ImageView
            android:id="@+id/pic"
            android:src="@drawable/ic_launcher"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pic"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/app_caption"
                android:textColor="#111111"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic"
                android:layout_below="@+id/header"
                android:paddingLeft="5dp"
                android:text="@string/app_desc"
                android:textColor="#111111"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_below="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pic2"
                android:src="@drawable/ic_call_48px"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic2"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/lessons"
                    android:textColor="#111111"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic2"
                    android:layout_below="@+id/header2"
                    android:paddingLeft="5dp"
                    android:text="@string/phone_text"
                    android:textColor="#111111"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pic3"
                android:src="@drawable/ic_language_48px"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic3"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/site"
                    android:textColor="#111111"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic3"
                    android:layout_below="@+id/header3"
                    android:paddingLeft="5dp"
                    android:text="@string/site_link"
                    android:textColor="#111111"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pic4"
                android:src="@drawable/ic_vk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic4"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/vk"
                    android:textColor="#111111"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic4"
                    android:layout_below="@+id/header4"
                    android:paddingLeft="5dp"
                    android:text="@string/vk_link"
                    android:textColor="#111111"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pic5"
                android:src="@drawable/ic_telegram"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic5"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/telegram"
                    android:textColor="#111111"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic5"
                    android:layout_below="@+id/header5"
                    android:paddingLeft="5dp"
                    android:text="@string/telegram_link"
                    android:textColor="#111111"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                       android:id="@+id/buttongid"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_margin="2dp"
                                       card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/gid"
                    android:src="@drawable/ic_language_48px"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="5dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/gid"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/headergid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/gid_text"
                        android:textColor="#111111"
                        android:textSize="20sp" />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/gid"
                        android:layout_below="@+id/headergid"
                        android:paddingLeft="5dp"
                        android:text="@string/gid_link"
                        android:textColor="#111111"
                        android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                       android:id="@+id/buttonrutube"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_margin="2dp"
                                       card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/picrutube"
                    android:src="@drawable/ic_language_48px"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="5dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/picrutube"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/headerrutube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/rutube_text"
                        android:textColor="#111111"
                        android:textSize="20sp" />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/picrutube"
                        android:layout_below="@+id/headerrutube"
                        android:paddingLeft="5dp"
                        android:text="@string/rutube_link"
                        android:textColor="#111111"
                        android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                       android:id="@+id/button6"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_margin="2dp"
                                       card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/pic6"
                    android:src="@drawable/ic_youtube_play"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="5dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic6"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/header6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/video"
                        android:textColor="#111111"
                        android:textSize="20sp" />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/pic6"
                        android:layout_below="@+id/header6"
                        android:paddingLeft="5dp"
                        android:text="@string/youtube_link"
                        android:textColor="#111111"
                        android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pic7"
                android:src="@drawable/ic_android_48px"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pic7"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/app_create"
                    android:textColor="#111111"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pic7"
                    android:layout_below="@+id/header7"
                    android:paddingLeft="5dp"
                    android:text="@string/app_email"
                    android:textColor="#111111"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>
</RelativeLayout>
